bigblueswarm/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bigblueswarm
  namespace: bigblueswarm
spec:
  serviceName: bigblueswarm
  replicas: 1
  selector:
    matchLabels:
      app: bigblueswarm
  template:
    metadata:
      labels:
        app: bigblueswarm
    spec:
      containers:
        - name: bigblueswarm
          image: sledunois/bigblueswarm:latest
          args: ["-config", "/etc/bigblueswarm/config.yml"]
          ports:
            - name: http
              containerPort: 8090
          volumeMounts:
            - name: config
              mountPath: /etc/bigblueswarm
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
      volumes:
        - name: config
          configMap:
            name: bigblueswarm-config
