bigblueswarm/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bigblueswarm
  namespace: bigblueswarm
spec:
  type: NodePort
  selector:
    app: bigblueswarm
  ports:
    - name: http
      port: 8090
      targetPort: 8090
